add favicon icon

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/static/images/favicon_64.ico" type="image/x-icon">
     <title>Vibe BPMN Editor AI powered</title>
 
     <link rel="stylesheet" href="https://unpkg.com/bpmn-js@14.0.0/dist/assets/diagram-js.css" />
@@ -16,7 +17,9 @@
 <body>
     <header class="app-header">
         <div class="logo">
-            <i class="fas fa-project-diagram"></i> Vibe BPMN Studio
+            <img src="/static/images/favicon_256.ico" alt="favicon"
+                style="height:2em;vertical-align:middle;margin-right:4px;">
+            Vibe BPMN Studio
         </div>
         <div class="toolbar">
             <input type="file" id="file-input" accept=".bpmn,.xml" hidden>
